--- a/src/pages/profil/profil.html
+++ b/src/pages/profil/profil.html
@@ -48,7 +48,7 @@
         </button>
       </ion-col>
       <ion-col>
-        <button class="cbtn" ion-button icon-start block >
+        <button class="cbtn" ion-button icon-start block (click)="goToInspiration()">
           <ion-icon name="heart"></ion-icon>
           <div>Inspiration</div>
         </button>
