--- a/src/pages/profil/profil.html
+++ b/src/pages/profil/profil.html
@@ -42,7 +42,7 @@
     <ion-row>
 
       <ion-col>
-        <button class="cbtn" ion-button icon-start block>
+        <button class="cbtn" ion-button icon-start block (click)="goToFavVendor()">
           <ion-icon name="bookmark"></ion-icon>
           <div>My Fav Vendor</div>
         </button>
