--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -16,69 +16,70 @@
       </p>
     </div>
 
-    <!-- Login form -->
-    <form class="list-form">
-      <ion-item>
-        <ion-label floating>
-          <ion-icon name="person" item-start class="text-pink"></ion-icon>
-          Full Name
-        </ion-label>
-        <ion-input type="text"  ></ion-input>
-      </ion-item>
+    <!-- Register form -->
+    <form class="list-form" autocomplete="off" [formGroup]="registerForm" (ngSubmit)="onSubmit(registerForm.value)">
+      <ion-row>
+        <ion-col>
+          <ion-item [ngClass]="{'error-border':!registerForm.controls.name.valid && registerForm.controls.name.touched}">
+            <ion-label floating>
+              <ion-icon name="person" item-start class="text-pink"></ion-icon>
+              Full Name
+            </ion-label>
+            <ion-input formControlName="name" type="text" required></ion-input>
+          </ion-item>
+          <ion-item color="danger" class="form-error" *ngIf="registerForm.controls.name.hasError('required') && registerForm.controls.name.touched">
+            <p>Nama harus diisi</p>
+          </ion-item>
 
-      <ion-item>
-        <ion-label floating>
-          <ion-icon name="mail" item-start class="text-pink"></ion-icon>
-          Email
-        </ion-label>
-        <ion-input type="email"  ></ion-input>
-      </ion-item>
+          <ion-item [ngClass]="{'error-border':!registerForm.controls.email.valid && registerForm.controls.email.touched}">
+            <ion-label floating>
+              <ion-icon name="mail" item-start class="text-pink"></ion-icon>
+              Email
+            </ion-label>
+            <ion-input formControlName="email" type="email" required ></ion-input>
+          </ion-item>
+          <ion-item color="danger" class="form-error" *ngIf="registerForm.controls.email.hasError('required') && registerForm.controls.email.touched">
+            <p>Email harus diisi</p>
+          </ion-item>
+          <ion-item color="danger" class="form-error" *ngIf="registerForm.controls.email.hasError('email') && registerForm.controls.email.touched">
+            <p>Format email tidak valid</p>
+          </ion-item>
 
-      <ion-item>
-        <ion-label floating>
-          <ion-icon name="lock" item-start class="text-pink"></ion-icon>
-          Password
-        </ion-label>
-        <ion-input type="password"  ></ion-input>
-      </ion-item>
+          <ion-item [ngClass]="{'error-border':!registerForm.controls.password.valid && registerForm.controls.password.touched}">
+            <ion-label floating>
+              <ion-icon name="lock" item-start class="text-pink"></ion-icon>
+              Password
+            </ion-label>
+            <ion-input formControlName="password" type="password" required show-password></ion-input>
+          </ion-item>
+          <ion-item color="danger" class="form-error" *ngIf="registerForm.controls.password.hasError('required') && registerForm.controls.password.touched">
+            <p>Password harus diisi</p>
+          </ion-item>
 
-      <ion-item>
-        <ion-label floating>
-          <ion-icon name="lock" item-start class="text-pink"></ion-icon>
-          Konfirmasi Password
-        </ion-label>
-        <ion-input type="password"  ></ion-input>
-      </ion-item>
+          <ion-item [ngClass]="{'error-border':!registerForm.controls.confirm_password.valid && registerForm.controls.confirm_password.touched}">
+            <ion-label floating>
+              <ion-icon name="lock" item-start class="text-pink"></ion-icon>
+              Confirm Password
+            </ion-label>
+            <ion-input formControlName="confirm_password" type="password" required show-password></ion-input>
+          </ion-item>
+          <ion-item color="danger" class="form-error" *ngIf="registerForm.controls.confirm_password.hasError('required') && registerForm.controls.confirm_password.touched">
+            <p>Konfirmasi Password harus diisi</p>
+          </ion-item>
+          <ion-item color="danger" *ngIf="registerForm.controls.confirm_password.touched && registerForm.hasError('mismatchedPasswords') && registerForm.controls.password.valid">
+            <ion-label no-margin stacked>Passwords do not match</ion-label>
+          </ion-item>
+
+        </ion-col>
+      </ion-row>
+
+      <div margin-top>
+        <button class="btreg" ion-button icon-start block tappable type="submit" [disabled]="!registerForm.valid">
+          <ion-icon name="log-in"></ion-icon>
+          SIGN UP
+        </button>
+      </div>
     </form>
-
-    <div margin-top>
-      <button class="btreg" ion-button icon-start block tappable (click)="register()">
-        <ion-icon name="log-in"></ion-icon>
-        SIGN UP
-      </button>
-
-      <!--<p text-center ion-text color="secondary">Or Sign Up with:</p>
-
-      <ion-grid>
-        <ion-row>
-          <ion-col col-4>
-            <button ion-button icon-only block class="btn-facebook">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </button>
-          </ion-col>
-          <ion-col col-4>
-            <button ion-button icon-only block class="btn-twitter">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </button>
-          </ion-col>
-          <ion-col col-4>
-            <button ion-button icon-only block class="btn-gplus">
-              <ion-icon name="logo-googleplus"></ion-icon>
-            </button>
-          </ion-col>
-        </ion-row>
-      </ion-grid>-->
-    </div>
 
     <!-- Other links -->
     <div text-center margin-top>
