--- a/src/pages/profil/profil.html
+++ b/src/pages/profil/profil.html
@@ -24,7 +24,7 @@
 
   <ion-card>
     <ion-avatar>
-      <img [src]="photo" />
+      <img [src]="photo" class="backgroundAvatar" />
     </ion-avatar>
     <div class="ticon">
       <ion-icon (click)="doUploadPhoto()" name="reverse-camera"></ion-icon>
