--- a/src/pages/rincian/rincian.html
+++ b/src/pages/rincian/rincian.html
@@ -10,7 +10,7 @@
     <ion-title start >Rincian</ion-title>
 
     <ion-buttons end>
-      <button class="tprint" ion-button icon-only>
+      <button class="tprint" ion-button icon-only (click)="print()">
         <ion-icon name="print-outline"></ion-icon>
       </button>
     </ion-buttons>
