--- a/src/pages/konsep/konsep.html
+++ b/src/pages/konsep/konsep.html
@@ -25,8 +25,8 @@
           </ion-card>
         </ion-col>
         <ion-col col-6 (click)="addConcept()" class="tgrid">
-          <ion-card [style.backgroundImage]="'url(https://cdn.sandals.com/sandals/v12/images/weddings/weddings-honeymoons/ocean-couple-wedding.jpg)'">
-          <ion-icon class="card-icon" name="add-circle-outline"></ion-icon>
+          <ion-card color="light">
+          <ion-icon class="card-icon" color="primary" name="add-circle-outline"></ion-icon>
         </ion-card>
         </ion-col>
       </ion-row>
