--- a/src/pages/rincian/rincian.html
+++ b/src/pages/rincian/rincian.html
@@ -11,7 +11,7 @@
 
     <ion-buttons end>
       <button class="tprint" ion-button icon-only (click)="print()">
-        <ion-icon name="print-outline"></ion-icon>
+        <ion-icon name="print" color="primary"></ion-icon>
       </button>
     </ion-buttons>
   </ion-toolbar>
