--- a/src/pages/konsep/konsep.html
+++ b/src/pages/konsep/konsep.html
@@ -26,7 +26,7 @@
         </ion-col>
         <ion-col col-6 (click)="addConcept()" class="tgrid">
           <ion-card color="light">
-          <ion-icon class="card-icon" color="primary" name="add-circle-outline"></ion-icon>
+          <ion-icon class="card-icon" name="add-circle"></ion-icon>
         </ion-card>
         </ion-col>
       </ion-row>
