--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -28,7 +28,7 @@
     </button>
 
     <button class="fontset" ion-item (click)="changePassword()">
-      <ion-icon name="medical-outline" item-start small></ion-icon>
+      <ion-icon ios="ios-medical-outline" md="md-medical" item-start small></ion-icon>
       Ubah Password
     </button>
 
