--- a/src/pages/gallery/gallery.html
+++ b/src/pages/gallery/gallery.html
@@ -14,6 +14,21 @@
 
 
 <ion-content padding>
+
+  <div no-border-top>
+      <ion-segment [(ngModel)]="pet">
+        <ion-segment-button value="puppies">
+          Decoration
+        </ion-segment-button>
+        <ion-segment-button value="kittens">
+          Photography
+        </ion-segment-button>
+        <ion-segment-button value="ducklings">
+          Catering
+        </ion-segment-button>
+      </ion-segment>
+    </div>
+
   <ion-refresher (ionRefresh)="doRefresh($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
