--- a/src/pages/profil/profil.html
+++ b/src/pages/profil/profil.html
@@ -126,6 +126,10 @@
   </ion-card-header>
 </ion-card>
 
+<ion-fab right bottom>
+  <button ion-fab color="secondary" (click)="openWa()"><ion-icon name="logo-whatsapp"></ion-icon></button>
+</ion-fab>
+
 
 
 </ion-content>
