--- a/src/pages/detailvendor/detailvendor.html
+++ b/src/pages/detailvendor/detailvendor.html
@@ -53,7 +53,9 @@
 
   <ion-item no-lines>
     <h2 ion-text item-start color="subtle">Mulai dari :</h2>
-    <span ion-text item-end color="primary" class="item-bold">{{ item.price | currency:"IDR ":true:"0.0"  }}</span>
+    <span ion-text color="primary" class="item-bold">{{ item.price | currency:"IDR ":true:"0.0"  }}</span>
+    <ion-icon item-end small color="primary" name='star'></ion-icon>
+    <div item-end  >9.4</div>
   </ion-item>
 
   <ion-card-content class="tdesc">
