--- a/src/pages/history-detail/history-detail.html
+++ b/src/pages/history-detail/history-detail.html
@@ -20,6 +20,10 @@
       {{item.vendor.name}}
       <p class="tsub" ><b>{{ item.vendor_package.name }}</b></p>
       <p class="tsub" >{{ item.grand_total | currency:"IDR ":true:"0.0" }}</p>
+      <button class="tprint" ion-button icon-only (click)="ratingPage(item)">
+        <ion-icon name="star" color="white"></ion-icon>
+        Beri Rating  
+      </button>
     </ion-item>
   </ion-card>
 </ion-content>
