--- a/src/pages/price/price.html
+++ b/src/pages/price/price.html
@@ -22,7 +22,7 @@
     </ion-item>
 
     <ion-card-content class="tdesc">
-      <p>{{ package.description }}</p>
+      <p [innerHTML]="package.description"></p>
     </ion-card-content>
   </ion-item>
   <!-- <ion-item no-lines>
